# Snake-Gui

./: CMakeLists.txt
api/: IComponent.hpp  IGame.hpp  IPosition.hpp
inc/: CFood.hpp  CPosition.hpp  CSnake.hpp  CUtility.hpp  IConfig.hpp  IData.hpp
src/: CFood.cpp  CPosition.cpp  CSnake.cpp  CUtility.cpp  test.cpp
